--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 # ---------------------------------------------------------------
 
 # Site
-title: 四十后学
+title: 喜欢吃苹果的梨
 subtitle:
-description: 四十后学。
-author: 四十后学
+description: 喜欢吃苹果的梨。
+author: 喜欢吃苹果的梨
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: zh-Hans
 date_format: '%Y-%m-%d'
@@ -79,7 +79,7 @@ plugins:
 favicon: /assets/favicon.ico
 
 # Set default keywords (Use a comma to separate)
-keywords: "四十后学"
+keywords: "喜欢吃苹果的梨"
 
 # Set rss to false to disable feed link.
 # Leave rss as empty to use site's feed link.
