--- a/_config.yml
+++ b/_config.yml
@@ -246,7 +246,7 @@ social_icons:
 
 # Sidebar Avatar
 # in directory: /assets/images/avatar.gif
-avatar: /assets/images/avatar2.gif
+# avatar: 
 
 
 # Table Of Contents in the Sidebar
