--- a/_config.yml
+++ b/_config.yml
@@ -4,22 +4,22 @@
 # ---------------------------------------------------------------
 
 # Site
-title: 青柠学术
+title: 喜欢苹果的梨
 subtitle:
-description: 持续输出优质的科研技巧、效率工具。公众号：青柠学术。
-author: 青柠学术
+# description: 持续输出优质的科研技巧、效率工具。公众号：青柠学术。
+author: 喜欢苹果的梨
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: zh-Hans
 date_format: '%Y-%m-%d'
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com' and baseurl as '/child'
-url:  https://iseex.github.io
+url:  https://mlinking.github.io/
 baseurl:
 permalink: /:year-:month/:title/  #pretty
 
 # Pagination
-paginate: 10
+paginate: 15
 #paginate_path: "/page:num/"
 #archive:
   #paginate: 10
@@ -79,7 +79,7 @@ plugins:
 favicon: /assets/favicon.ico
 
 # Set default keywords (Use a comma to separate)
-keywords: "青柠学术"
+keywords: "喜欢苹果的梨"
 
 # Set rss to false to disable feed link.
 # Leave rss as empty to use site's feed link.
@@ -123,7 +123,7 @@ menu:
   tags: /tags/
   books: /books/
   about: /about/
-  gifts: /gifts/
+  #gifts: /gifts/
   #sitemap: /sitemap.xml
   #commonweal: /404.html
 
@@ -218,12 +218,12 @@ font:
 # Key is the link label showing to end users.
 # Value is the target link (E.g. GitHub: https://github.com/iissnan)
 social:
-  GitHub: https://github.com/iseex
-  Scholar: https://www.researchgate.net/profile/Hongsheng_Xu2
-  Projects: https://iseex.github.io/research
-  Twitter: https://twitter.com/iseexuhs
+  GitHub: https://mlinking.github.io/
+  # Scholar: https://www.researchgate.net/profile/Hongsheng_Xu2
+  # Projects: https://iseex.github.io/research
+  # Twitter: https://twitter.com/iseexuhs
   简书: https://www.jianshu.com/u/5902bc489072
-  Weibo: https://weibo.com/iseexuhs
+  # Weibo: https://weibo.com/iseexuhs
 
 
 
@@ -392,7 +392,7 @@ han: false
 
 # Baidu Analytics ID
 # s?后为id
-baidu_analytics: b0ecab2411ae3fdb11b239f4a68ade48
+# baidu_analytics: b0ecab2411ae3fdb11b239f4a68ade48
 
 # Duoshuo ShortName
 #duoshuo_shortname:
@@ -502,7 +502,7 @@ wildfire:
 #google_site_verification:
 
 # Google Analytics
-google_analytics: UA-124182047-1
+# google_analytics: UA-124182047-1
 
 # Yandex Webmaster tools verification setting
 # See: https://webmaster.yandex.ru/
