--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-ï»¿# ---------------------------------------------------------------
+# ---------------------------------------------------------------
 # Jekyll & Global Configuration
 ## Docs: https://jekyllrb.com/docs/configuration/
 # ---------------------------------------------------------------
 
 # Site
-title: å–œæ¬¢è‹¹æœçš„æ¢¨
+title: Ï²»¶Æ»¹ûµÄÀæ
 subtitle:
-# description: æŒç»­è¾“å‡ºä¼˜è´¨çš„ç§‘ç ”æŠ€å·§ã€æ•ˆç‡å·¥å…·ã€‚å…¬ä¼—å·ï¼šé’æŸ å­¦æœ¯ã€‚
-author: å–œæ¬¢è‹¹æœçš„æ¢¨
+# description: ³ÖĞøÊä³öÓÅÖÊµÄ¿ÆÑĞ¼¼ÇÉ¡¢Ğ§ÂÊ¹¤¾ß¡£¹«ÖÚºÅ£ºÇàÄûÑ§Êõ¡£
+author: Ï²»¶Æ»¹ûµÄÀæ
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: zh-Hans
 date_format: '%Y-%m-%d'
@@ -79,7 +79,7 @@ plugins:
 favicon: /assets/favicon.ico
 
 # Set default keywords (Use a comma to separate)
-keywords: "å–œæ¬¢è‹¹æœçš„æ¢¨"
+keywords: "Ï²»¶Æ»¹ûµÄÀæ"
 
 # Set rss to false to disable feed link.
 # Leave rss as empty to use site's feed link.
@@ -222,7 +222,7 @@ social:
   # Scholar: https://www.researchgate.net/profile/Hongsheng_Xu2
   # Projects: https://iseex.github.io/research
   # Twitter: https://twitter.com/iseexuhs
-  ç®€ä¹¦: https://www.jianshu.com/u/5902bc489072
+  ¼òÊé: https://www.jianshu.com/u/5902bc489072
   # Weibo: https://weibo.com/iseexuhs
 
 
@@ -240,7 +240,7 @@ social_icons:
   Twitter: twitter
   Scholar: graduation-cap
   Projects: suitcase
-  ç®€ä¹¦: heartbeat
+  ¼òÊé: heartbeat
   Weibo: weibo
 
 
@@ -293,19 +293,19 @@ sidebar:
   scrollpercent: true
 
 
-# Blog rolls  å‹é“¾
+# Blog rolls  ÓÑÁ´
 links_title: Links
 #links_layout: block
 links_layout: inline  # recommended
 links:
   #asdfv1929: https://asdfv1929.github.io/
   #shenzekun: http://shenzekun.cn
-  é’æŸ å­¦æœ¯: https://iseex.github.io
+  ÇàÄûÑ§Êõ: https://iseex.github.io
   #wingjay: http://wingjay.com/
-  ä¹¦æ ¼: https://new.shuge.org/
-  å¤©çœ¼æŸ¥: https://www.tianyancha.com/
-  å¤®è§†çºªå½•é¢‘é“: http://tv.cctv.com/cctv9/?spm=C00367.PTdnYnoIyzbR.0.0
-  ä¼šè®®åˆ—è¡¨: http://www.conferencelist.info/upcoming.html
+  Êé¸ñ: https://new.shuge.org/
+  ÌìÑÛ²é: https://www.tianyancha.com/
+  ÑëÊÓ¼ÍÂ¼ÆµµÀ: http://tv.cctv.com/cctv9/?spm=C00367.PTdnYnoIyzbR.0.0
+  »áÒéÁĞ±í: http://www.conferencelist.info/upcoming.html
 
 
 # ---------------------------------------------------------------
@@ -344,8 +344,8 @@ post_wordcount:
 # Wechat Subscriber
 wechat_subscriber:
   enabled: true
-  qcode: /assets/images/ISEEX-qrcode.jpg #/path/to/your/wechatqcode ex. /uploads/wechat-qcode.jpg
-  description: <font style="font-size:12px">å…³æ³¨å…¬ä¼—å·ï¼Œè·å–æ›´å¤šå¸®åŠ©ï½</font> #ex. subscribe to my blog by scanning my public wechat account
+  qcode: https://images4git-1301301910.cos.ap-beijing.myqcloud.com/wxGZH/qrcode_for_gh_50CM.jpg #/path/to/your/wechatqcode ex. /uploads/wechat-qcode.jpg
+  description: <font style="font-size:12px">¹Ø×¢¹«ÖÚºÅ£¬»ñÈ¡¸ü¶à°ïÖú¡«</font> #ex. subscribe to my blog by scanning my public wechat account
 
 # Declare license on posts
 post_copyright:
@@ -353,9 +353,9 @@ post_copyright:
   license: CC BY-NC-SA 3.0
   license_url: https://creativecommons.org/licenses/by-nc-sa/3.0/
 
-# post-reward æ‰“èµ
-alipay: https://images4git-1301301910.cos.ap-beijing.myqcloud.com/forPay/payZFB5.jpg #qr-codeçš„åœ°å€
-wechatpay: https://images4git-1301301910.cos.ap-beijing.myqcloud.com/forPay/payWX5.png #qr-codeåœ°å€
+# post-reward ´òÉÍ
+alipay: https://images4git-1301301910.cos.ap-beijing.myqcloud.com/forPay/payZFB5.jpg #qr-codeµÄµØÖ·
+wechatpay: https://images4git-1301301910.cos.ap-beijing.myqcloud.com/forPay/payWX5.png #qr-codeµØÖ·
 
 # ---------------------------------------------------------------
 # Misc Theme Settings
@@ -395,7 +395,7 @@ han: false
 #swiftype_key:
 
 # Baidu Analytics ID
-# s?åä¸ºid
+# s?ºóÎªid
 # baidu_analytics: b0ecab2411ae3fdb11b239f4a68ade48
 
 # Duoshuo ShortName
@@ -428,11 +428,11 @@ han: false
 
 # Support for LiveRe comments system.
 # You can get your uid from https://livere.com/insight/myCode (General web site)
-# æ³¨æ„ï¼šå®‰è£…livereå¿…é¡»å…³é—­gitalkï¼Œä¸ç„¶ä¼šé…ç½®å‡ºé”™ã€‚
+# ×¢Òâ£º°²×°livere±ØĞë¹Ø±Õgitalk£¬²»È»»áÅäÖÃ³ö´í¡£
 # livere_uid: MTAyMC8zOTA1OS8xNTU4Ng==
 
 # Support for gitalk comments system.
-# æ³¨æ„ï¼šå®‰è£…gitalkå¿…é¡»å…³é—­livereï¼Œä¸ç„¶ä¼šé…ç½®å‡ºé”™ã€‚
+# ×¢Òâ£º°²×°gitalk±ØĞë¹Ø±Õlivere£¬²»È»»áÅäÖÃ³ö´í¡£
 gitalk:
   enable: false
   clientID: 9cc85294515eed2e31fe # 54730ddf7b9420460c03
@@ -454,14 +454,14 @@ wildfire:
   version: 0.5.6 
   # database config
   databaseProvider: firebase # or wilddog
-  firebase: # your firebase config goes here â†“
+  firebase: # your firebase config goes here ¡ı
     apiKey: AIzaSyCNqroS109rphqBeyOmDEY6FVnrowtPAPI
     authDomain: https://iseex-new-dbd88.firebaseio.com
     databaseURL: https://iseex-new-dbd88.firebaseio.com
     projectId: iseex-new-dbd88
     storageBucket: iseex-new-dbd88.appspot.com
     messagingSenderId: 619524497577
-  wilddog: # your wilddog config goes here â†“
+  wilddog: # your wilddog config goes here ¡ı
     siteId:
   # other configs
   theme: light # light or dark
@@ -573,7 +573,7 @@ leancloud_visitors:
 
 # Show PV/UV of the website/page with busuanzi.
 # Get more information on http://ibruce.info/2015/04/04/busuanzi/
-# ç›´æ¥ä½¿èƒ½å°±å¯ä»¥ä½¿ç”¨ï¼Œä¸éœ€è¦ç”³è¯·Api
+# Ö±½ÓÊ¹ÄÜ¾Í¿ÉÒÔÊ¹ÓÃ£¬²»ĞèÒªÉêÇëApi
 busuanzi_count:
   # count values only if the other configs are false
   enable: false
@@ -595,7 +595,7 @@ busuanzi_count:
 
 # Online contact 
 daovoice: false
-daovoice_app_id: 80b13f12 #è¿™é‡Œå¡«ä½ çš„åˆšæ‰è·å¾—çš„ app_i
+daovoice_app_id: 80b13f12 #ÕâÀïÌîÄãµÄ¸Õ²Å»ñµÃµÄ app_i
 
 # Tencent analytics ID
 # tencent_analytics:
@@ -681,7 +681,7 @@ pace: false
 # pace_theme: pace-theme-center-simple
 pace_theme: pace-theme-minimal
 
-# Canvas-nest åŠ¨æ€èƒŒæ™¯
+# Canvas-nest ¶¯Ì¬±³¾°
 canvas_nest: false
 
 # three_waves
