--- a/_config.yml
+++ b/_config.yml
@@ -306,6 +306,7 @@ links:
   天眼查: https://www.tianyancha.com/
   央视纪录频道: http://tv.cctv.com/cctv9/?spm=C00367.PTdnYnoIyzbR.0.0
   会议列表: http://www.conferencelist.info/upcoming.html
+  不错的电子书网站: https://ua.b-ok2.org/
 
 
 # ---------------------------------------------------------------
