--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ date_format: '%Y-%m-%d'
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com' and baseurl as '/child'
-url:  https://mlinking.github.io
+url:  http://www.kukoo.online
 baseurl:
 permalink: /:year-:month/:title/  #pretty
 
