Windows GUI Error

--- a/_config.yml
+++ b/_config.yml
@@ -147,7 +147,7 @@ menu_icons:
   categories: th-list
   schedule: calendar
   tags: tags
-  classes: academic
+  classes:  bullhorn
   archives: university
   sitemap: sitemap
   commonweal: heartbeat
