--- a/_config.yml
+++ b/_config.yml
@@ -308,7 +308,7 @@ links_layout: inline  # recommended
 links:
   #asdfv1929: https://asdfv1929.github.io/
   #shenzekun: http://shenzekun.cn
-  青柠学术: https://iseex.github.io
+  #青柠学术: https://iseex.github.io
   #wingjay: http://wingjay.com/
   书格: https://new.shuge.org/
   天眼查: https://www.tianyancha.com/
