--- a/_config.yml
+++ b/_config.yml
@@ -310,11 +310,11 @@ links:
   #shenzekun: http://shenzekun.cn
   #青柠学术: https://iseex.github.io
   #wingjay: http://wingjay.com/
+  会议列表: http://www.conferencelist.info/upcoming.html
   书格: https://new.shuge.org/
   天眼查: https://www.tianyancha.com/
   央视纪录频道: http://tv.cctv.com/cctv9/?spm=C00367.PTdnYnoIyzbR.0.0
-  会议列表: http://www.conferencelist.info/upcoming.html
-  不错的电子书: https://ua.b-ok2.org/
+  #不错的电子书: https://ua.b-ok2.org/
 
 
 # ---------------------------------------------------------------
